@@ -1,3 +1,7 @@
+Wed Aug 08 03:17:37 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/searchconnection.py: Improve documentation comment.
+
 Wed Aug 08 03:13:10 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection.py: Add "matches_human_readable_estimate"
